samples/_failures_safe/1761040587_94e0dd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2b360d7.c: In function ‘main’:
./samples/SAFE/__tmp_b2b360d7.c:158:17: error: expected expression at end of input
  158 |                 if (status ==
      |                 ^~
./samples/SAFE/__tmp_b2b360d7.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b2b360d7.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b2b360d7.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b2b360d7.c:158:17: error: expected declaration or statement at end of input
